CHORE: print average tg in millikan oil drop exp

--- a/lab8-密立根油滴/Millikan-oil-drop.ipynb
+++ b/lab8-密立根油滴/Millikan-oil-drop.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21.659999999999997, 23.12, 16.786666666666665, 25.833333333333332, 21.30333333333333]\n"
+     ]
+    }
+   ],
    "source": [
     "# constant\n",
     "q_ref = 1.602e-19\n",
@@ -34,7 +42,8 @@
     "U = [193, 169, 169, 137, 145]\n",
     "\n",
     "tg_bar = [sum(tg[i])/3 for i in range(5)]\n",
-    "\n"
+    "\n",
+    "print(tg_bar)"
    ]
   },
   {
