--- a/project-激光测距仪测量折射率/laser_rangefinder.ipynb
+++ b/project-激光测距仪测量折射率/laser_rangefinder.ipynb
@@ -16,14 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4862896509547887\n"
+      "1.4977103678403934\n",
+      "1.4878317633125941\n",
+      "1.486469475056611\n"
      ]
     }
    ],
@@ -34,18 +36,49 @@
     "    n = (np.sin(0.5 * (sigma_min + A))) / (np.sin(0.5 * A))\n",
     "    return n\n",
     "   \n",
-    "# convert degrees to radians \n",
-    "A = np.radians(60)\n",
-    "sigma_min = np.radians(36)\n",
     "\n",
-    "print(calculate_refractive_index(A, sigma_min))"
+    "# convert degrees to radians \n",
+    "A = np.radians(59 + 59/60) \n",
+    "# purple, green, yellow\n",
+    "sigma_min_list = [np.radians(36 + 58/60),\n",
+    "                  np.radians(36 + 7/60),\n",
+    "                  np.radians(36)]\n",
+    "\n",
+    "for sigma_min in sigma_min_list:\n",
+    "    print(calculate_refractive_index(A, sigma_min))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 使用分光机测量亚克力的折射率\n",
+    "\n",
+    "## 柯西色散公式与折射率修正\n",
+    "\n",
+    "$$\n",
+    "n(\\lambda) = B + \\frac{C}{\\lambda^2} + \\frac{D}{\\lambda^4}\n",
+    "$$\n",
+    "\n",
+    "利用三组波长和折射率联立解得柯西色散公式系数\n",
+    "\n",
+    "代入黄色光（波长为0.589微米）计算得到标准折射率。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.48205862056845, -0.000473228255535702, 0.000654425131973435]\n",
+      "1.48613203381719\n"
+     ]
+    }
+   ],
    "source": [
     "from sympy import symbols, Eq, solve\n",
     "\n",
@@ -53,12 +86,31 @@
     "    B, C, D = symbols('B C D')\n",
     "\n",
     "    # define equations\n",
-    "    eq1 = Eq(B + C / wavelength_list[0]**2 + D / wavelength_list[0]**4, n_list[0]**2)\n",
-    "    eq2 = Eq(B + C / wavelength_list[1]**2 + D / wavelength_list[1]**4, n_list[1]**2)\n",
-    "    eq3 = Eq(B + C / wavelength_list[2]**2 + D / wavelength_list[2]**4, n_list[2]**2)\n",
+    "    eq1 = Eq(B + C / wavelength_list[0]**2 + D / wavelength_list[0]**4, n_list[0])\n",
+    "    eq2 = Eq(B + C / wavelength_list[1]**2 + D / wavelength_list[1]**4, n_list[1])\n",
+    "    eq3 = Eq(B + C / wavelength_list[2]**2 + D / wavelength_list[2]**4, n_list[2])\n",
     "\n",
-    "    solution = solve((eq1, eq2, eq3), (B, C, D))\n",
-    "    return solution"
+    "    solution = solve((eq1, eq2, eq3), (B, C, D), list=True)\n",
+    "    return [solution[B], solution[C], solution[D]]\n",
+    "\n",
+    "def cauchy_equation(wavelength, coes):\n",
+    "    B = coes[0]\n",
+    "    C = coes[1]\n",
+    "    D = coes[2]\n",
+    "    n = B + C / wavelength**2 + D / wavelength**4\n",
+    "    return n\n",
+    "\n",
+    "# purple, green, yellow\n",
+    "n_list = [1.49771, 1.48783, 1.48647]\n",
+    "wave_list = [0.4358, 0.5461, 0.5790]\n",
+    "\n",
+    "coes = cal_cauchy_coe(n_list, wave_list)\n",
+    "print(coes)\n",
+    "\n",
+    "# substitute 0.589 to get the corrected refractive index\n",
+    "n_corrected = cauchy_equation(0.589, coes)\n",
+    "\n",
+    "print(n_corrected)"
    ]
   }
  ],
