FEAT: add cal of uncertainty

--- a/project-激光测距仪测量折射率/laser_rangefinder.ipynb
+++ b/project-激光测距仪测量折射率/laser_rangefinder.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,20 +32,20 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def calculate_refractive_index(A, sigma_min):\n",
-    "    n = (np.sin(0.5 * (sigma_min + A))) / (np.sin(0.5 * A))\n",
+    "def calculate_refractive_index(A, delta_min):\n",
+    "    n = (np.sin(0.5 * (delta_min + A))) / (np.sin(0.5 * A))\n",
     "    return n\n",
     "   \n",
     "\n",
     "# convert degrees to radians \n",
     "A = np.radians(59 + 59/60) \n",
     "# purple, green, yellow\n",
-    "sigma_min_list = [np.radians(36 + 58/60),\n",
+    "delta_min_list = [np.radians(36 + 58/60),\n",
     "                  np.radians(36 + 7/60),\n",
     "                  np.radians(36)]\n",
     "\n",
-    "for sigma_min in sigma_min_list:\n",
-    "    print(calculate_refractive_index(A, sigma_min))"
+    "for delta_min in delta_min_list:\n",
+    "    print(calculate_refractive_index(A, delta_min))"
    ]
   },
   {
@@ -67,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.48205862056845, -0.000473228255535702, 0.000654425131973435]\n",
-      "1.48613203381719\n"
+      "Cauchy Coes: [1.48205862056845, -0.000473228255535702, 0.000654425131973435]\n",
+      "n_corrected: 1.48613203381719\n"
      ]
     }
    ],
@@ -105,12 +105,65 @@
     "wave_list = [0.4358, 0.5461, 0.5790]\n",
     "\n",
     "coes = cal_cauchy_coe(n_list, wave_list)\n",
-    "print(coes)\n",
+    "print(\"Cauchy Coes:\", coes)\n",
     "\n",
     "# substitute 0.589 to get the corrected refractive index\n",
     "n_corrected = cauchy_equation(0.589, coes)\n",
     "\n",
-    "print(n_corrected)"
+    "print(\"n_corrected:\", n_corrected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "折射率不确定度计算\n",
+    "\n",
+    "$U(\\delta_{min})$ 和 $U(A)$ 的计算参考之前实验的 A B 类不确定度合成，较为简单。\n",
+    "\n",
+    "这里只列出折射率不确定度 $U(n)$ 的计算公式。\n",
+    "\n",
+    "$$\n",
+    "U^2(n) = \\left( \\frac{\\partial n}{\\partial \\delta_{\\text{min}}} \\right)^2 U^2(\\delta_{\\text{min}}) + \\left( \\frac{\\partial n}{\\partial A} \\right)^2 U^2(A)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "U(n) = \\sqrt{\n",
+    "\\left(\n",
+    "\\frac{\\cos\\left(\\frac{\\delta_{\\text{min}} + A}{2}\\right)}\n",
+    "{2 \\sin\\left(\\frac{A}{2}\\right)}\n",
+    "\\right)^2 U^2(\\delta_{\\text{min}}) +\n",
+    "\\left(\n",
+    "\\frac{\\sin\\left(\\frac{\\delta_{\\text{min}}}{2}\\right)}\n",
+    "{2 \\sin^2\\left(\\frac{A}{2}\\right)}\n",
+    "\\right)^2 U^2(A)\n",
+    "}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U(n): 0.0007952543151544224\n"
+     ]
+    }
+   ],
+   "source": [
+    "def U_n(delta, U_delta, A, U_A):\n",
+    "    U_n = np.sqrt(\n",
+    "        (np.cos(0.5 * (A + delta)) * U_delta / (2 * np.sin(0.5 * A)))**2 + \\\n",
+    "        (np.sin(0.5 * delta) * U_A / (2 * np.sin(0.5 * A)**2))**2\n",
+    "        )\n",
+    "    return U_n\n",
+    "\n",
+    "U_n_yellow = U_n(delta_min_list[2], np.radians(3/60), A, np.radians(3/60))\n",
+    "print(\"U(n):\", U_n_yellow)"
    ]
   }
  ],
